--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib"]
 	path = lib
 	url = https://github.com/Optinomic/lib.git
+[submodule "ch.suedhang.apps.aase-g"]
+	path = ch.suedhang.apps.aase-g
+	url = git@github.com:Optinomic/ch.suedhang.apps.aase-g.git
